bug fix for spacing issue on questions & answers, answer page

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1694,7 +1694,7 @@ p.questions_info_right_column_number span {
   line-height: 30px;
   font-size: 14px;
   padding-right: 40px;
-  margin-top: -18px;
+  margin-top: 0px;
 }
 
 .default_lecture_question.correct_lecture_answer {
@@ -1706,6 +1706,11 @@ p.questions_info_right_column_number span {
   padding-bottom: 25px;
   margin-bottom: 25px;
   cursor: default;
+  white-space: normal;
+  white-space: normal;
+  white-space: normal;
+  white-space: normal;
+  word-wrap: normal;
 }
 
 .questions_result_sub_title{
@@ -1728,7 +1733,11 @@ p.questions_info_right_column_number span {
   padding-top: 35px;
   padding-bottom: 25px;
   cursor: default;
-
+  white-space: normal;
+  white-space: normal;
+  white-space: normal;
+  white-space: normal;
+  word-wrap: normal;
 }
 
 div.incorrect_question_icon {
